# asteroids

./: .gitignore  asteroid.py  asteroidfield.py  circleshape.py  constants.py  groups.py  main.py  player.py  pyproject.toml  run.sh  shot.py  tox.ini
docs/: conf.py  index.rst
src/asteroids/: asteroid.py  asteroidfield.py  circleshape.py  circlshape.py  constants.py  groups.py  main.py  player.py  shot.py
src/asteroids.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
