[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroids"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    # Add runtime dependencies here
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[project.optional-dependencies]
lint = [
]
test = [
]
doc = [
]
build = [
]
dev = [
    "tox",
    "my-project[lint]",
    "my-project[test]",
    "my-project[doc]",
    "my-project[build]",
]
